--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <label class="marker">
           Kamu:
           <select id="humanMarker">
-            <option value="🐱">🐱</option>
+            <option value="😹">😹</option>
             <option value="🐶">🐶</option>
           </select>
         </label>
